Interests page >> About Me page. Plus some text changes and additions
Changed the name of Interests page to About Me page and adjusted all nav links accordingly. Added and changed text on Home page and About Me page. Added some info on About Me page that should only be displayed on hover. Will format next

--- a/styles.css
+++ b/styles.css
@@ -89,11 +89,11 @@ header .profile-image:hover {
   transform: scale(1.2);
 }
 
-.location:hover {
+.nickname:hover {
   transform: scale(1.7);
 }
 
-.location {
+.nickname {
   background-color: #222;
   color: white;
 }
