--- a/styles.css
+++ b/styles.css
@@ -56,13 +56,6 @@ a:hover {
 }
 
 header {
-  text-align: center;
-  background: url('images/louisiananature.jpg') no-repeat top center ;
-  background-size: cover;
-  overflow: hidden;
-  padding-top: 60px;
-}
-header {
   line-height: 1.5;
 }
 header .profile-image {
@@ -76,6 +69,39 @@ header .profile-image {
 header .profile-image:hover {
   transform: scale(1.3) rotate(360deg);
 }
+
+#indexheader {
+  background: url('images/clouds.jpg') no-repeat top center ;
+  text-align: center;
+  background-size: cover;
+  overflow: hidden;
+  padding-top: 60px;
+}
+
+#aboutmeheader {
+  background: url('images/swamp.jpg') no-repeat top center ;
+  text-align: center;
+  background-size: cover;
+  overflow: hidden;
+  padding-top: 60px;
+}
+
+#skillsheader {
+  background: url('images/workspace.jpg') no-repeat top center ;
+  text-align: center;
+  background-size: cover;
+  overflow: hidden;
+  padding-top: 60px;
+}
+
+#contactheader {
+  background: url('images/phone.jpg') no-repeat top center ;
+  text-align: center;
+  background-size: cover;
+  overflow: hidden;
+  padding-top: 60px;
+}
+
 .tag {
   background-color: #efefef;
   color: black;
@@ -133,6 +159,10 @@ ul.skills {
 
 .skills li:nth-child(odd) {
   background: #2595e0e8;
+}
+
+.hover-info {
+  display: none;
 }
 
 footer {
