--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ header .profile-image:hover {
   transition: all .5s;
 }
 
-ul.skills {
+ul.skills , ul.hobbieslist {
   padding: 0;
   text-align: center;
 }
@@ -161,8 +161,22 @@ ul.skills {
   background: #2595e0e8;
 }
 
+.hobbieslist li {
+  border-radius: 6px;
+  display: block;
+  background: #188b2b;
+  color: white;
+  padding: 5px 5px;
+  margin: 20px;
+}
+
 .hover-info {
   display: none;
+}
+
+#contactlist {
+  list-style-type: none;
+  text-align: center;
 }
 
 footer {
