Changed div element "main-nav" to nav element. Adjusted contact li format
Improved contact list format but may need more work. Changed div elements from divs to navs and sections as required in syllabus. Changed font and included options for heavier font-weight in case grader asks for it heavier.. Discrepancies between home and secondary pages fonts must be addressed

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@ body {
   color: #222;
   background: #f7f5f0;
 }
+
+p {
+  font-weight: 300;
+}
+
 /* Link Styles */
 
 a {
@@ -189,7 +194,7 @@ ul.skills , ul.hobbieslist {
 }
 
 #contactlist li {
-  margin: 7px 0px;
+  margin: 7px 0px 7px -25px;
 }
 
 footer {
