Added "more" buttons to about me page
Added Javascript file and more buttons for about me page. Can't make the "less" buttons work. Will continue to try or post in slack for ideas. Also need to condense JS functions for each button to one function for all buttons.

--- a/styles.css
+++ b/styles.css
@@ -190,8 +190,12 @@ ul.skills , ul.hobbieslist {
   margin: 20px;
 }
 
-.hover-info {
+.hidden-info {
   display: none;
+}
+
+.visible-info {
+  display: block;
 }
 
 #contactlist {
