Used HTML & CSS validators to find & correct errors
Fixed all footer credit links. Fixed double body tags on all pages. Entire makeover of contact page. Minor text changes on multiple pages.

About me page is still a wreck and would like to seek help with JS validator and Slack forum

--- a/styles.css
+++ b/styles.css
@@ -200,8 +200,7 @@ ul.skills , ul.hobbieslist {
   display: block;
 }
 
-#contactlist {
-  list-style-type: none;
+#contactcard {
   text-align: center;
 }
 
@@ -212,6 +211,10 @@ ul.skills , ul.hobbieslist {
 #contactlist a {
   color: unset;
   text-decoration: underline;
+}
+
+#contactlist {
+  list-style-type: none;
 }
 
 footer {
