Updated tagline max width
Makes left and right margins for mobile-friendly layout

--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,7 @@ header .profile-image:hover {
   border-radius: 5px;
   display: table;
   margin: 10px auto;
+  max-width: 80%;
 }
 
 .headline {
