--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ header .profile-image:hover {
 
 .card {
   margin: 30px;
-  padding: 20px 40px 40px;
+  padding: 20px 40px;
   max-width: 500px;
   text-align: left;
   background: #fff;
