'About Me' page format makeover

--- a/styles.css
+++ b/styles.css
@@ -168,12 +168,12 @@ header .profile-image:hover {
   line-height: 2em;
 }
 
-ul.skills , ul.hobbieslist {
+ul.skills , ul.hobbies-list {
   padding: 0;
   text-align: center;
 }
 
-.skills li {
+.skills li, .hobbies-list h3 {
   border-radius: 6px;
   display: inline-block;
   background: #9da59e;
@@ -186,11 +186,22 @@ ul.skills , ul.hobbieslist {
   background: #2595e0e8;
 }
 
-.hobbieslist {
+.hobbies-list h3 {
+  background-color: darkolivegreen;
+  width: 250px;
+  padding: 30px auto -30px;
+}
+
+.hobbies-list {
   text-align: center;
 }
 
-.hobbieslist h3 {
+#hobbies-card {
+  padding-top: 60px;
+}
+
+/* 
+.hobbies-list h3 {
   border-radius: 6px;
   display: block;
   background: #6da1e0e8;
@@ -198,7 +209,7 @@ ul.skills , ul.hobbieslist {
   padding: 5px 5px;
   margin: 10px;
   font-size: 1em;
-}
+} */
 
 .hidden-info {
   display: none;
@@ -211,10 +222,10 @@ ul.skills , ul.hobbieslist {
 button {
   border-radius: 6px;
   display: block;
-  background: #9da59e;
+  background: #2595e0e8;
   color: white;
   padding: 5px 5px;
-  margin: 5px auto;
+  margin: 5px auto 30px;
   border-width: 1px;
   font-size: 12px;
 }
