--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 body {
   margin: 0;
   padding: 0;
-  text-align: center;
 	font-family: 'Fira Sans', sans-serif;
   color: #222;
   background: #f7f5f0;
@@ -18,7 +17,12 @@ p, li {
 
 nav li {
   font-weight: 500;
-  font-size: 16px;
+  font-size: .75rem;
+  max-width: 400px;
+}
+
+#nav-title {
+  display: none;
 }
 
 /* Link Styles */
@@ -144,7 +148,7 @@ header .profile-image:hover {
 }
 
 .card {
-  margin: 30px;
+  margin: 30px auto;
   padding: 20px 40px;
   max-width: 500px;
   text-align: left;
@@ -299,7 +303,13 @@ a.social:hover {
   clear: both;
 }
 
-/* Styles for larger screens */
+
+
+
+/*================================================================
+                         MEDIA QUERIES
+=================================================================*/
+
 @media screen and (min-width: 720px) {
   
   .flex {
@@ -316,10 +326,13 @@ a.social:hover {
   }
 
   .nav {
-    max-width: 1200px;
     padding: 0 30px;
   }
 
+  .nav li {
+    font-size: 1.5rem;
+
+  }
 
   main {
     padding-top: 20px;
