--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
 	font-family: 'Fira Sans', sans-serif;
-  color: #222;
+  /* color: #222; */
   background: #f7f5f0;
 }
 
