--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,14 @@ main {
 }
 
 #nav-div {
-  max-width: 700px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
 .nav-ul {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   list-style-type: none;
   margin: 0 auto;
   padding: 0;
@@ -262,7 +263,6 @@ button {
 
 .contact-list li {
   list-style-type: none;
-  line-height: 2.5em;
 }
 
 .contact-list a {
@@ -391,6 +391,8 @@ a.social:hover {
     margin-right: auto;
     color: white;
     font-weight: 500;
+    border: 1px dotted white;
+    padding: 3px 6px;
   }
 
   main {
