--- a/styles.css
+++ b/styles.css
@@ -176,20 +176,15 @@ p {
   padding: 1.5rem;
   width: 400px;
   background: #fff;
-  border-right: 5px solid transparent;
-  border-bottom: 10px solid transparent;
   border-radius: 6px;
   text-align: left;
+  padding: 20px;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
 .card h2 {
   text-align: center;
-}
-
-.card:hover {  
-  transition: all .5s;
-  border-right: 5px solid #ccc;
-  border-bottom: 10px solid #ccc;
 }
 
 /* =============================================================
